--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
 </head>
 
 <body>
-  
-<div class='jumbotron'>
 
-  <div class="container">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li> 
+      <li><a href="#">Join us!</a></li>
+      <li><a href="#">Contact</a></li>  
+    </ul>
+  </div>
+</nav>
+  
 
   
 
@@ -42,45 +54,7 @@
     </form>
   </div>
 
-  <div id="buzz">
-    <h2><small>The Buzz</small><br />What are people saying?</h2>
-    
 
-<div class='row'>
-
-<div class='col-sm-4'>
-
-<div>
-      <img src='images/person.jpg'>
-      <blockquote><p>These sandwiches are the best I've ever tasted, for sure. I now eat them every day - breakfast, lunch and dinner.</p>
-      <small>Mr Smith, Professional sandwich taster</small></blockquote>
-    </div>
-</div>
-<div class='col-sm-4'>
-<div>
-      <img src='images/person.jpg'>
-      <blockquote><p>My team are always far more productive after we order from Sam's. 40% more productive, in fact.</p></blockquote>
-      <small>Miss McAdam, CEO Workplace Analytics</small>
-    </div>
-</div>
-<div class='col-sm-4'>
-<div>
-      <img src='images/person.jpg'>
-      <blockquote><p>We switched to Sam's Sarnies and won our first government contract the next day. Coincidence? I think not!</p>
-      <small>Mr Green, President Suspicion Inc.</small></blockquote>
-    </div> 
-  </div>
-</div>
-</div>
-
-
-
-  <div id="mission">
-    <h2><small>Our mission</small><br />Join us in helping busy professionals eat healthily</h2>
-
-    <p class="lead">We believe that healthy workers are more productive workers.</p>
-    <p class="lead">Providing your team with a healthy lunch each day improves both motivation and morale.</p>
-    <p class="lead">We deliver healthy sandwiches, made with the best ingredients, to your workplace every day.</p>
 
     <div id='social-buttons'>
       <button class='btn-twitter'>Twitter</button>
