--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
 
+
+<div class='jumbotron'>
+
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
