--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 <body>
 
-
 <div class='jumbotron'>
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -27,9 +26,34 @@
     </ul>
   </div>
 </nav>
-  
 
-  
+
+ <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <img src="images/BumblebeeLavender.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img src="images/BeeHoneycomb.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img src="images/SleepingBees.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="icon-prev" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="icon-next" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div> 
 
   <div class='row'>
 
@@ -45,8 +69,6 @@
 
     </div>
   </div>
-    
-
     
 
     <form role='form'>
