--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
 
 
  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+ <!--carousel indicators-->
   <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
   </ol>
+  <!--carousel items-->
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
       <img src="images/BumblebeeLavender.jpg" alt="First slide">
@@ -45,16 +47,17 @@
       <img src="images/SleepingBees.jpg" alt="Third slide">
     </div>
   </div>
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="icon-prev" aria-hidden="true"></span>
+  <!--carousel controls-->
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="icon-next" aria-hidden="true"></span>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
 </div> 
-
+<!--end of carousel-->
   <div class='row'>
 
     <div class='col-sm-4'>
