--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </nav>
 
 
- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+ <div id="myCarousel" class="carousel slide" data-ride="carousel">
  <!--carousel indicators-->
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
