--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 <head>
-
-  <link href='bootstrap-3.3.7-dist/css/bootstrap.css' rel='stylesheet'>
-  <link href="main.css" rel="stylesheet">
+  <!-- Required meta tags-->
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <!--CSS-->
+  <!--<link href='bootstrap-3.3.7-dist/css/bootstrap.css' rel='stylesheet'>-->
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="main.css" rel="stylesheet">
+  <!--Title-->
   <title>The Bee Project</title>
-
 </head>
 
 <body>
 
-<div class='jumbotron'>
-
+<!--NavBar-->
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -26,39 +29,80 @@
     </ul>
   </div>
 </nav>
+<!--End of NavBar-->
 
-
- <div id="myCarousel" class="carousel slide" data-ride="carousel">
- <!--carousel indicators-->
+<!--Carousel-->
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<!--Carousel Indicators-->
   <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
   </ol>
-  <!--carousel items-->
+  <!--Carousel Items-->
   <div class="carousel-inner" role="listbox">
-    <div class="carousel-item active">
-      <img src="images/BumblebeeLavender.jpg" alt="First slide">
+    <div class="item active">
+      <img class="img-responsive center-block" src="Images/HoneybeeFlower2.jpg" alt="First slide">
+      <div class="carousel-caption">
+        <h3>First Slide</h3>
+      </div>
     </div>
-    <div class="carousel-item">
-      <img src="images/BeeHoneycomb.jpg" alt="Second slide">
+    <div class="item">
+      <img class="img-responsive center-block" src="Images/SolitaryBee.jpg" alt="Second slide">
+        <div class="carousel-caption">
+        <h3>Second Slide</h3>
+      </div>
     </div>
-    <div class="carousel-item">
-      <img src="images/SleepingBees.jpg" alt="Third slide">
+    <div class="item">
+      <img class="img-responsive center-block" src="Images/BeeLavender.jpg" alt="Third slide">
+        <div class="carousel-caption">
+        <h3>Third Slide</h3>
+      </div>
     </div>
   </div>
-  <!--carousel controls-->
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+  <!--Carousel Controls-->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="icon-prev" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="icon-next" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div> 
-<!--end of carousel-->
-  <div class='row'>
+</div>
+
+ <!-- <script> 
+jQuery('.carousel').carousel({interval: 3000 });
+// Normalize Carousel Heights - pass in Bootstrap Carousel items.
+function carouselNormalization() {
+var items = jQuery('#carousel-example-generic .item'), //grab all slides
+heights = [], //create empty array to store height values
+shortest; //create variable to make note of the shortest slide
+
+//if (items.length) {
+function normalizeHeights() {
+items.each(function() { //add heights to array
+heights.push(jQuery(this).height());
+});
+shortest = Math.min.apply(null, heights); //cache largest value
+items.each(function() {
+jQuery('.carousel-inner').css('height',shortest + 'px').css('overflow','hidden');
+
+});
+};
+normalizeHeights();
+
+jQuery(window).on('resize orientationchange', function () {
+shortest = 0, heights.length = 0; //reset vars
+items.each(function() {
+jQuery('.carousel-inner').css('height','0'); //reset min-height
+});
+normalizeHeights(); //run it again
+});
+}
+}
+carouselNormalization();
+</script> -->
 
     <div class='col-sm-4'>
 
@@ -67,11 +111,8 @@
     </div>
 
     <div class='col-sm-8'>
-
-      <img src='images/sandwich.png'>
-
     </div>
-  </div>
+  
     
 
     <form role='form'>
@@ -90,6 +131,14 @@
     </div>
   </div>
 
+
+
+<!--JS-->
+<script src="jQuery/jquery-3.1.1.min.js"></script>
+<script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+
+ 
+</script>
 
 </body>
 
