--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <a class="navbar-brand page-scroll" href="#page-top">The Bee Project</a>
     </div>
     </div>
-    <div class="collapse navbar-collapse navbar-ex1-collapse"
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
       <li class="hidden active"><a class="page-scroll" href="#page-top">Home</a></li>
       <li><a class="page-scroll" href="#about">About</a></li> 
@@ -126,7 +126,21 @@
 <div class="col-lg-12">
 
 <h1>Contact</h1>
-
+ <div class='row'>
+<div class='col-sm-4'>
+<div>
+      <img src='images/joanna.jpg' class="img-circle center-block" width="200" height="200">
+     <p><blockquote>I have been Bee Keeping since I was young and I really want to share my passion with others.</p>
+      <small>Joanna Esghalado, Founder of the Bee Project</small></blockquote>
+    </div>
+</div>
+<div class='col-sm-4'>
+ <div>
+      <img src='images/madeleine.jpg' class="img-circle center-block" width="200" height="200">
+      <blockquote><p>I love honey and I have always been passionate about the environment and the idea of making cities greener.</p>
+      <small>Madeleine Vironda, Co-Founder of the Bee Project</small></blockquote>
+    </div>
+</div>
 </div>
 </div>
 </div>
