--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 <body>
 
 <!--NavBar-->
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
+<div class='container-fluid'>
+<nav class="navbar transparent navbar-inverse navbar-fixed-top">
+  
     <div class="navbar-header page scroll">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
       <span class="icon-bar"></span>
@@ -33,7 +34,7 @@
       <span class="icon-bar"></span>
     </button>
       <a class="navbar-brand page-scroll" href="#page-top">The Bee Project</a>
-    </div>
+    
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
@@ -44,9 +45,12 @@
     </ul>
   </div>
 </nav>
+</div>
 <!--End of NavBar-->
 
 <!--Carousel-->
+
+<div class='container-fluid'>
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 <!--Carousel Indicators-->
   <ol class="carousel-indicators">
@@ -85,11 +89,14 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+</div>
 
-<div>
+
+
+<div class='container-fluid'>
 
 <section id="about" class="about-us">
-<div class="container">
+<!-- <div class="container"> -->
 <div class="row">
 <div class="col-lg-12">
 
@@ -102,6 +109,8 @@
 
 <p>We want to raise awareness about the importance of bees and the creation of honey in cities. Using a model similar to that already implemented in New York, we strive to set up Bee Hives on London rooftops throughout the city!
 </p>
+</div>
+
 
 <section id="join us!" class="join-us">
 <div class="container">
@@ -120,6 +129,9 @@
 </div>
 </section>
 
+
+
+
 <section id="contact" class="contact">
 <div class="container">
 <div class="row">
@@ -129,15 +141,15 @@
  <div class='row'>
 <div class='col-sm-4'>
 <div>
-      <img src='images/joanna.jpg' class="img-circle center-block" width="200" height="200">
-     <p><blockquote>I have been Bee Keeping since I was young and I really want to share my passion with others.</p>
-      <small>Joanna Esghalado, Founder of the Bee Project</small></blockquote>
+      <img src='images/joana.jpg' class="img-circle center-block" width="200" height="200">
+     <p><blockquote>I've been keeping bees for a a while and I really want to share my passion with others</p>
+      <small>Joana Esgalhado, Co-Founder of the Bee Project</small></blockquote>
     </div>
 </div>
 <div class='col-sm-4'>
  <div>
       <img src='images/madeleine.jpg' class="img-circle center-block" width="200" height="200">
-      <blockquote><p>I love honey and I have always been passionate about the environment and the idea of making cities greener.</p>
+      <blockquote><p>I love honey and I have always been passionate about the environment and the idea of making cities greener</p>
       <small>Madeleine Vironda, Co-Founder of the Bee Project</small></blockquote>
     </div>
 </div>
@@ -146,66 +158,9 @@
 </div>
 </section>
 
- <!-- <script> 
-jQuery('.carousel').carousel({interval: 3000 });
-// Normalize Carousel Heights - pass in Bootstrap Carousel items.
-function carouselNormalization() {
-var items = jQuery('#carousel-example-generic .item'), //grab all slides
-heights = [], //create empty array to store height values
-shortest; //create variable to make note of the shortest slide
 
-//if (items.length) {
-function normalizeHeights() {
-items.each(function() { //add heights to array
-heights.push(jQuery(this).height());
-});
-shortest = Math.min.apply(null, heights); //cache largest value
-items.each(function() {
-jQuery('.carousel-inner').css('height',shortest + 'px').css('overflow','hidden');
 
-});
-};
-normalizeHeights();
 
-jQuery(window).on('resize orientationchange', function () {
-shortest = 0, heights.length = 0; //reset vars
-items.each(function() {
-jQuery('.carousel-inner').css('height','0'); //reset min-height
-});
-normalizeHeights(); //run it again
-});
-}
-}
-carouselNormalization();
-</script> -->
-<!--end of carousel-->
-
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner" role="listbox">
-    <div class="carousel-item active">
-      <img src="images/SleepingBees.jpg" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img src="images/SleepingBees.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img src="images/SleepingBees.jpg" alt="Third slide">
-    </div>
-  </div>
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="icon-prev" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="icon-next" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
     <div class='col-sm-8'>
     </div>
